# gpn

./: .gitignore  README.md  dataprocess.py  main.py  measure_metrics.py
cfgs_exp/: test.yaml
cfgs_exp/ModelNet10/gabriel/: edge_gabriel_A.yaml  edge_gabriel_B.yaml  gat_gabriel.yaml  gcn_gabriel.yaml  gin_gabriel.yaml  mr_gabriel_A.yaml  mr_gabriel_B.yaml
cfgs_exp/ModelNet10/knn/: edge_knn_A.yaml  edge_knn_B.yaml  gat_knn.yaml  gcn_knn.yaml  gin_knn.yaml  mr_knn_A.yaml  mr_knn_B.yaml
cfgs_exp/ModelNet10/rng/: edge_rng_A.yaml  edge_rng_B.yaml  gat_rng.yaml  gcn_rng.yaml  gin_rng.yaml  mr_rng_B.yaml
cfgs_exp/ModelNet40/gabriel/: edge_gabriel_A.yaml  edge_gabriel_B.yaml  gat_gabriel.yaml  gcn_gabriel.yaml  gin_gabriel.yaml  mr_gabriel_A.yaml  mr_gabriel_B.yaml
cfgs_exp/ModelNet40/knn/: edge_knn_A.yaml  edge_knn_B.yaml  gat_knn.yaml  gcn_knn.yaml  gin_knn.yaml  mr_knn_A.yaml  mr_knn_B.yaml
cfgs_exp/ModelNet40/rng/: edge_rng_A.yaml  edge_rng_B.yaml  gat_rng.yaml  gcn_rng.yaml  gin_rng.yaml  mr_rng_A.yaml  mr_rng_B.yaml
cfgs_exp/SHAPENET_SKEL/gabriel/: gin_gabriel.yaml
datasets/: __init__.py  base.py  data_utils.py  modelnet10.py  modelnet40.py  scanobject.py  shapenet_skel.py
models/: Edge.py  GAT.py  GCN.py  GIN.py  GIN0.py  MR.py  __init__.py
models/TO DO/: GINNet_test.py  base.py  layers.py
pcl_utils/: CMakeLists.txt
pcl_utils/include/pcl_utils/: edge.hpp  file_processor.hpp  thread_pool.hpp  util.hpp
pcl_utils/include/pcl_utils/cuda/: edge_cuda.hpp  gabriel_graph_cuda.hpp  pointxyz_cuda.hpp  rng_graph_cuda.hpp
pcl_utils/src/: edge.cpp  file_processor.cpp  main.cpp  thread_pool.cpp  util.cpp
pcl_utils/src/cuda/: gabriel_graph_cuda.cu  rng_graph_cuda.cu
pointnet_exp/gpn_sa_cuda/: setup.py
py_utils/: check_gabriel.py  dat2pcd.py  h52pcd.py  knn_graph.py  metrics.py  off2pcd.py  train_script.py
(+61 files in other folders)
